--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     />
     <meta property="twitter:image" content="/lishu.jpg" />
 
-    <title>React Starter</title>
+    <title>GITMAN NFT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
